--- a/eco-store-frontend/index.html
+++ b/eco-store-frontend/index.html
@@ -83,32 +83,14 @@
             <div class="col-lg-10" id="showcase"></div>
         </div>
 
-        <div class="mt-4">
+        <div class="mt-4" id="app-pagination-id">
             <nav aria-label="Page navigation">
-                <ul class="pagination justify-content-end pe-4">
-                    <li class="page-item">
-                        <a class="page-link app-page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&lsaquo;</span>
-                        </a>
-                    </li>
-                    <li class="page-item app-page-item"><a class="page-link app-page-link app-page-link-active"
-                            href="#">1</a></li>
-                    <li class="page-item app-page-item"><a class="page-link app-page-link" href="#">2</a></li>
-                    <li class="page-item app-page-item"><a class="page-link app-page-link" href="#">3</a></li>
-                    <li class="page-item app-page-item"><a class="page-link app-page-link" href="#">4</a></li>
-                    <li class="page-item app-page-item"><a class="page-link app-page-link" href="#">5</a></li>
-                    <li class="page-item app-page-item">
-                        <a class="page-link app-page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&rsaquo;</span>
-                        </a>
-                    </li>
-                </ul>
+                <ul class="pagination justify-content-end pe-4"></ul>
             </nav>
         </div>
 
     </div>
-    <script src="js/local/products.js"></script>
-    <script src="js/local/app.js"></script>
+    <script src="js/local/app.js" type="module"></script>
     <script src="js/vendors/bootstrap.bundle.min.js"></script>
 </body>
 
